# raytracing

./: .gitmodules  CMakeLists.txt  Doxyfile  NOTES  README  README.md  gkk_xmlreader.cpp
figures/: figures.md
poc/: main.cu
poc/class-constr-in-method/: Objects.cu  Objects.cuh  compile.sh  main.cu
poc/device-factory/: compile.sh
poc/sort-no-recursion/: main.cpp
scenes/: cornell-box-optix.xml  cornell-box.xml  sample-caustics.xml  sample.xml  test-optix.xml  test.xml
src/: AABB.cu  AABB.cuh  ArgumentParser.cpp  ArgumentParser.h  Camera.cpp  Camera.cu  Camera.cuh  Camera.h  GenericMaterial.cpp  GenericMaterial.cu  GenericMaterial.h  GenericMaterialDevice.cu  GenericMaterialDevice.cuh  GenericObject.cpp  GenericObject.cu  GenericObject.h  GenericObjectDevice.cu  GenericObjectDevice.cuh  GenericTexture.cu  GenericTexture.h  GenericTextureDevice.cuh  ImageSaver.cpp  ImageSaver.h  Materials.cu  Materials.cuh  MeshLoader.cpp  MeshLoader.h  Objects.cu  Objects.cuh  OptixRenderer.cpp  OptixRenderer.cu  OptixRenderer.cuh  OptixRenderer.h  OptixRenderer.ptx  Ray.cuh  Renderer.cu  Renderer.cuh  SceneDevice.cu  SceneDevice.cuh  SceneObjects.h  (+83 more)
